--- a/style.css
+++ b/style.css
@@ -56,5 +56,44 @@ number-container > p {
 }
 
 #board {
-    
+    padding-top: 10px;
+    margin-top: 10px;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: flex-start;
+    width: 600px;
+    height: 600px;
+}
+
+.tile {
+    border: 1px solid black;
+    width: 60px;
+    height: 60px;
+    text-align: center;
+    margin: 0px;
+    vertical-align: middle;
+    font-size: 40pt;
+}
+
+p.selected{
+    background-color: lightblue;
+
+}
+
+p.incorrect{
+    color: red;
+}
+
+.rightBorder{
+    border-right: 4px solid black;
+}
+
+.bottomBorder{
+    border-bottom: 4px solid black;
+}
+
+footer{
+    background-color: lightgray;
+    text-align: center;
 }
