--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ p#timer, p#lives {
     justify-content: center;
 }
 
-number-container > p {
+#number-container > p {
     border: 1px solid black;
     border-radius: 20%;
     width: 60px;
